<resources>
    <string name="app_name">SFP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="SERVER_ERROR">Ops! server error, please try again</string>
    <string name="USER_ALREADY_FOUND">user already found with the same password, and email</string>
    <string name="USER_NOT_FOUND">User not found, check you authentication</string>
    <string name="CONNECTIVITY_ERROR">can\'t reach server, check you connectivity</string>
    <string name="BAD_PASS">not valid, password consists of 8-20 alphanumeric characters</string>
    <string name="BAD_NAME">not valid, name consists of 4-20 alphanumeric characters</string>
    <string name="BAD_EMAIL">not valid email</string>
    <string name="SIGN_UP">sign up</string>
    <string name="LOG_IN">log in</string>
    <string name="LOG_OUT">log out</string>
    <string name="NAME">name</string>
    <string name="PASS">password</string>
    <string name="EMAIL">email</string>
    <string name="LOGIN_IF_USER_EXISTS">Already a member? Login</string>
    <string name="DONT_HAVE_ACCOUNT_CREATE_ONE">don\'t have Account? Sign up</string>
    <string name="NO_CONNECTIVITY">No Internet access!</string>
    <string name="DOWNLOAD_DONE">song downloaded successfully</string>
    <string name="SONG_SIZE">size</string>
    <string name="DOWNLOADING_NOTIFY_TITLE">downloading new song</string>
    <string name="SEARCH_TV_HINT">search</string>
    <string name="YOUTUBE_SEARCH">youtube video search</string>
    <string name="NO_RESULT_FOUND">no result found</string>
    <string name="WILL_BE_DOWNLOADED_SOON">video will be downloaded soon</string>
    <string name="SERVER_ERROR_TRY_AGAIN">server error! please try again</string>
    <string name="SEARCH_TITLE">search youtube</string>
    <string name="SEARCHING">searching...</string>
    <string name="LISTENER_IS_OFF">make sure Listener is ON, for song to be downloaded</string>
    <string name="LISTENER_ACTIVATED">Listener activated</string>
    <string name="LISTENER_DEACTIVATED">Listener deactivated, you won\'t be able to receive any remote songs</string>
    <string name="DOWNLOADS_NUM">Downloads: </string>
    <string name="YOU_NEED_TO_LOGIN_FIRST">you must login before download!</string>
    <string name="DOWNLOAD_SONG">Download</string>
    <string name="REFUSE">refuse</string>
    <string name="ACCEPT_PEERSHIP">accept</string>
    <string name="SHARE_SONG_WITH_PEERS">send</string>
    <string name="SEND_PEER_SHIP_REQUEST">add peer</string>
    <string name="SHARE_SONGS_DIALOG">share with</string>
    <string name="SEARCH_LABEL">peers</string>
    <string name="WATCH_ON_YOUTUBE">watch on youtube</string>
    <string name="PEER_SEND_REQUEST">asks to send you songs</string>
    <string name="SEND_SONG_MESSAGE">write message</string>
    <string name="RESPOND">respond</string>
</resources>
